--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
 body{
     font-family: 'Ubuntu', sans-serif;
 }
-header, .banner, .services{
+header, .banner, .services, .contact{
     background-color: #10103A;
 }
 
 h1{
     font-weight: 800;
 }
-
+h2{
+    font-weight: 700;
+}
 h3{
     font-weight: 600;
 }
 
 header nav ul li a{
     font-size: 20px;
+    transition: 0.5s;
+}
+
+header nav ul li a:hover{
+    color: yellow !important;
 }
 
 .banner{
@@ -58,7 +65,9 @@ header nav ul li a{
 }
 
 
-
+.strategy{
+    margin-bottom: 150px;
+}
 .strategy h1{
     color: black !important;
 }
@@ -78,4 +87,46 @@ header nav ul li a{
     padding: 10px 25px;
     font-size: 20px;
     cursor: pointer;
+}
+
+
+
+
+
+
+.contact{
+    position: relative;
+}
+.contact form{
+    width: 350px;
+    background-color: #10103A;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -165px;
+    border-radius: 8px;
+}
+
+.contact form input{
+    width: 100%;
+    display: block;
+    margin: 20px 0;
+    padding: 10px;
+    border-radius: 8px;
+    outline: none;
+}
+
+.contact form input[type="submit"]{
+    width: 60%;
+    margin: 0 auto;
+}
+
+.contact .detail .top{
+    margin-top: 170px;
+}
+
+.contact .detail p{
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 30px;
 }
